<resources>
    <string name="app_name">AppStore</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="first_name">First name</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_api_keys">API Keys</string>
    <string name="menu_settings">Settings</string>
    <string name="common_install">Install</string>
    <string name="app_detail_platform">Platform: %1$s</string>
    <string name="app_detail_version">Version: %1$s</string>
    <string name="menu_teams">Teams</string>
    <string name="team_name">Team name</string>
    <string name="team_identifier">Team identifer</string>
    <string name="create_team">Create team</string>
    <string name="settings_team">Team</string>
    <string name="team_create_success">Successfully created team</string>
    <string name="workspace_url_hint">Server url</string>
    <string name="common_continue">Continue</string>
    <string name="workspace_name_hint">Workspace name</string>
    <string name="workspace_list_add_title">Add workspaces</string>
    <string name="workspace_list_add_description">Sign in workspace</string>
    <string name="menu_workspace">Workspace</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_workspace_add">Add</string>

    <string name="common_login">Login</string>
    <string name="common_register">Register</string>
    <string name="common_or">or</string>
    <string name="client_name">Boost</string>
    <string name="common_custom">Custom</string>
    <string name="login_remember_me">Remember me?</string>
    <string name="last_name">Last name</string>
    <string name="menu_search">Search</string>
    <string name="app_settings">Settings</string>
    <string name="app_open">Open</string>
    <string name="app_download">Download</string>
    <string name="menu_more_download">Download</string>
    <string name="common_open">Open</string>
    <string name="common_settings">Settings</string>
    <string name="common_more">More</string>
    <string name="menu_logout">Log out</string>
    <string name="workspace_url_name">Server name</string>
    <string name="menu_refresh">Refresh</string>
    <string name="workspace_list_title">Boost</string>
    <string name="workspace_list_subtitle">Server management</string>
    <string name="workspace_add_title">Add server</string>
</resources>
