<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/bg_main"
    tools:context=".ui.register.RegisterActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/margin_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/margin_16" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/register_title"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:text="@string/common_register"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="@+id/guideline_top" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name"
                style="@style/EditText.WhiteTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/register_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name"
                style="@style/EditText.WhiteTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/first_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                style="@style/EditText.WhiteTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/default_username"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/last_name" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/email"
                style="@style/EditText.WhiteTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/EditText.WhiteTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/email" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:backgroundTint="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:srcCompat="@drawable/ic_check" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>