<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@drawable/bg_main"
    tools:context=".ui.login.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/margin_16" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/margin_16" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login_title"
                style="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/common_login"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/username"
                style="@style/EditText.WhiteTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:text="@string/default_username"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/login_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                style="@style/EditText.WhiteTR"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:text="@string/default_password"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchCompat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/btn_login"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toTopOf="@+id/btn_login"
                app:thumbTint="@android:color/white"
                app:trackTint="@color/white_tr_50" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/remember_me_label"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginBottom="8dp"
                android:text="@string/login_remember_me"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/switchCompat"
                app:layout_constraintLeft_toRightOf="@+id/switchCompat"
                app:layout_constraintTop_toTopOf="@+id/switchCompat"
                app:textAllCaps="true" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                app:backgroundTint="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:srcCompat="@drawable/ic_check" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>